--- a/Novità.html
+++ b/Novità.html
@@ -30,8 +30,27 @@
 
 <p><big><big><span style="text-decoration: underline;">2023<br><br>ANNIVERSARI DEI CELEBRI VIGNOLESI</span></big></big></p><br><br>
  
-<p><big>Nell’immagine, vista della rocca di Vignola da Via Tufo in una fotografia scattata il 4 aprile 2022.</big></p><br>
-<img src="img/FOTO VARIE/viatufo.jpg" width="600" height="800"><br><br><br><br><br><br>
+
+<p><big><big><span style="text-decoration: underline;">ANNIVERSARI 2023</span></big></big></p><br><br>
+<p><big>Con questa foto un po' insolita della rocca di Vignola scattata alcune settimane fa nel sottotetto della Casa Natale di Lodovico Antonio Muratori, si coglie l’occasione per ricordare gli anniversari secolari e semisecolari che, in questo 2023, concernono i Vignolesi più illustri.</big></p>
+<p><big><strong>GIACOMO BAROZZI</strong>, architetto e trattatista dell’architettura: <strong>450 ANNI DALLA MORTE</strong></big></p><br>
+<p><big><strong>AMLETO DEGLI ESPOSTI</strong>, eroico aviatore e ufficiale dell’Aeronautica Militare: <strong>100 ANNI DALLA MORTE</strong></big></p><br>
+<p><big><strong>LUIGI GAZZOTTI</strong>, compositore musicale: <strong>100 ANNI DALLA MORTE</strong></big></p><br>
+<img src="img/FOTO VARIE/sottotetto.jpg" width="800" height="580"><br><br><br><br><br><br><br>
+
+
+<p><big><big><span style="text-decoration: underline;">5 giugno 2023</span></big></big></p><br><br>
+<p><big>Sabato 3 e domenica 4 giugno, in collaborazione con Pro Loco Vignola e Comune di Vignola, noi responsabili di <i>Celebri Vignolesi</i> abbiamo curato gratuitamente l’apertura della Camera Genetliaca di Lodovico Antonio Muratori, in via F. Selmi, 2.<br>
+Oggi, 5 giugno, pubblichiamo questo posto per ringraziare tutti e 24 i partecipanti all’iniziativa, i quali non solo hanno ascoltato le nostre spiegazioni e i nostri approfondimenti sulla figura di Muratori e sulla storia della sua Casa Natale, ma hanno anche scambiato con noi pensieri e conoscenze riguardanti Vignola e i nostri più illustri concittadini della storia.<br><br>
+A presto con altri appuntamenti di <i>Celebri Vignolesi</i>!</big></p><br>
+<center><img src="img/FOTO VARIE/studiolobuio.jpg" width="780" height="540"></center></big></p><br><br><br>
+
+
+<p><big><big><span style="text-decoration: underline;">30 maggio 2023</span></big></big></p><br><br>
+<p><big>Sabato 27 e domenica 28 <i>Celebri Vignolesi</i>, in collaborazione con l’Associazione "Amici dell’Arte Vignola a.p.s.", ha tenuto gratuitamente cinque passeggiate artistico-culturali all’interno del Cimitero Comunale della nostra città.<br>
+Oggi, 30 maggio, pubblichiamo questo posto per ringraziare tutti e 45 i partecipanti all’iniziativa, i quali hanno dimostrato che anche un luogo come il Cimitero, sovente associato alla tristezza e alla solitudine, è capace di destare il grande interesse dei cittadini e abbia ancora tanto da raccontare.<br>
+Desideriamo inoltre ringraziare l’Amministrazione Comunale, che ha rese possibili queste passeggiate, e tutto il personale del Cimitero, per la gentilezza e la disponibilità con cui ha accolto i coordinatori del progetto e ha predisposto le cose affinché i percorsi potessero svolgersi nel migliore dei modi.</big></p><br>
+<center><img src="img/FOTO VARIE/cimitero.jpg" width="800" height="600"></center></big></p><br><br><br>
 	
 <p><big><big><span style="text-decoration: underline;">19 maggio 2023</span></big></big></p><br><br>
 
