--- a/giugno.html
+++ b/giugno.html
@@ -47,7 +47,7 @@ Nel 2017, dopo poco più di due lustri di chiusura al quale era seguito un bienn
 
 
 Nella prima immagine sottostante, fotografia che risale suppergiù all’anno 1900 e che raffigura la Sala dei Tronchi d’Albero della rocca di Vignola quando era sede della Biblioteca Comunale; seduti, Alessandro Plessi e il figlio Renato (1878-1954), futuro farmacista in Vignola; in alto, s’intravede la lapide in ricordo di don Rodolfi, collocata in quel punto nel 1897, dunque un anno dopo la sua morte (tale lapide è attualmente affissa al primo piano della Residenza Municipale di Vignola). Fonte: Raccolta famiglia Plessi.<br>
-Nella seconda immagine qui sotto, fotografia recente della parte nord della Sala dei Tronchi d’Albero; sulla sinistra, si trova il modello ligneo – in scala reale – del tabernacolo disegnato da <strong>Giacomo Barozzi</strong> (1507-1573) ed eseguito in alabastro di Volterra – tra il 1563 e il 1565 – da Giammaria di Pistoia per la chiesa di Sant’Antonino Martire a Fara in Sabina (RI); questo modello è stato realizzato da Orazio Greco nel 2002.</p><br><br>
+Nella seconda immagine qui sotto, fotografia recente della parte nord della Sala dei Tronchi d’Albero; sulla sinistra, si trova il modello ligneo – in scala reale – del tabernacolo disegnato da <strong>Giacomo Barozzi</strong> (1507-1573) ed eseguito in alabastro di Volterra e marmo bianco – tra il 1563 e il 1565 – da Giammaria di Pistoia per la chiesa di Sant’Antonino Martire a Fara in Sabina (RI); questo modello è stato realizzato da Orazio Greco nel 2002.</p><br><br>
 <img src="img/celebri vignolesi/Rodolfi Giovanni/lapide.jpg" width="350" height="650"><br><br>
 <img src="img/celebri vignolesi/Rodolfi Giovanni/salatronchialbero.JPG" width="750" height="450"><br><br><br><br><br>
 
