--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -100,7 +100,7 @@
 
 <tr>
 <td><big><big><strong><a href="lamorente.html">33. La morente</a></strong></td>
-<td><big><big><strong><a href="aquila.html">34. L’aquila e la gazza</a></strong></td></tr>
+<td><big><big><strong><a href="aquilagazza.html">34. L’aquila e la gazza</a></strong></td></tr>
 <tr>
 <td><big><big><strong><a href="luce.html">35. La luce elettrica</a></strong></td>
 <td><big><big><strong><a href="fanciullo.html">36. Il fanciullo e la candela stearica</a></strong></td></tr>
