--- a/Soli2.html
+++ b/Soli2.html
@@ -36,7 +36,7 @@
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><center><big><big>Soli. Fonte: <i>Ivo Soli</i>, presentazione di Renzo Biasion, a cura della Cassa di Risparmio di Vignola,<br> Bologna, Arti Grafiche Tamari, 1979, senza paginazione.</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/Soli.jpg" width="430" height="600"><br><br>
-<p><center><big><big>Soli all’opera nel suo laboratorio di Vignola. Fonte: Francesco Gavioli, <i>Vignola. Un popolo una chiesa una storia</i>,<br> 2 voll., Vignola, Libreria “dei Contrari”, 1994, vol. II, p. 559 (siamo nella scheda <i>Soli Ivo</i>, pp. 556-565).</big></big></center><br>
+<p><center><big><big>Soli in età avanzata all’opera nel suo laboratorio vignolese di via Posterla.<br> Fonte: Francesco Gavioli, <i>Vignola. Un popolo una chiesa una storia</i>,<br> 2 voll., Vignola, Libreria “dei Contrari”, 1994, vol. II, p. 559 (siamo nella scheda <i>Soli Ivo</i>, pp. 556-565).</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/solilaboratorio.jpg" width="580" height="580"><br><br> 
 <p><center><big><big><i>Fanciulla china</i> (1925), bronzo; collezione privata.</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/fanciullapiegata.jpg" width="450" height="650"><br><br> 
