--- a/Bernardoni.html
+++ b/Bernardoni.html
@@ -77,10 +77,10 @@ L’incisione di Guzzi apre la dispensa su Bernardoni, il cui testo scritto è f
 <p><center><big><big>Frontespizio di <i>Rime varie, consagrate alla S.C.R. Maestà di Giuseppe I. August.mo Imperator de’ Romani, ​<br> da Pietro Antonio Bernardoni Poeta Cesareo, et Accademico Gelato, Arcade, Scomposto, Animoso, et Acceso,</i> ​<br> Vienna d’Austria, Appresso Gio. Van Ghelen, 1705. Fonte: collezione privata.</big></big></center></p>
 <img src="img/celebri vignolesi/Bernardoni/rimevarie.jpg" width="440" height="590"><br><br><br>
 
-<p><center><big><big>Frontespizio del primo dei due volumi della raccolta <i>Poemi drammatici</i>:<br> <i>Poemi drammatici di Pietro Antonio Bernardoni Poeta Cesareo, Et Accademico Arcade, Gelato, Scomposto, Animoso, & Acceso.<br> Parte prima consagrata All’Altezza Serenissima del Signor Principe di Toscana</i>,<br> In Bologna, Per Costantino Pisarri, sotto le Scuole all’Insegna di S. Michele, 1706. Fonte: google.com</big></big></center></p>
+<p><center><big><big>Frontespizio del primo dei due volumi della raccolta <i>Poemi drammatici</i>: <i>Poemi drammatici di Pietro Antonio Bernardoni Poeta Cesareo,<br> Et Accademico Arcade, Gelato, Scomposto, Animoso, & Acceso.<br> Parte prima consagrata All’Altezza Serenissima del Signor Principe di Toscana</i>,<br> In Bologna, Per Costantino Pisarri, sotto le Scuole all’Insegna di S. Michele, 1706. Fonte: google.com</big></big></center></p>
 <img src="img/celebri vignolesi/Bernardoni/poemidrammatici.jpg" width="440" height="590"><br><br><br>
 
-<p><center><big><big>Frontespizio del secondo dei due volumi della raccolta <i>Poemi drammatici</i>:<br> <i>Poemi drammatici di Pietro Antonio Bernardoni Poeta Cesareo, Et Accademico Arcade, Gelato, Scomposto, Animoso, & Acceso.<br> Parte seconda consagrata All’Altezza Serenissima di Rinaldo I. d'Este Duca di Modona Reggio &c.</i>,<br> In Bologna, Per Costantino Pisarri, sotto le Scuole all’Insegna di S. Michele, 1707. Fonte: google.com</big></big></center></p>
+<p><center><big><big>Frontespizio del secondo dei due volumi della raccolta <i>Poemi drammatici</i>:<br> <i>Poemi drammatici di Pietro Antonio Bernardoni Poeta Cesareo,<br> Et Accademico Arcade, Gelato, Scomposto, Animoso, & Acceso.<br> Parte seconda consagrata All’Altezza Serenissima di Rinaldo I. d'Este Duca di Modona Reggio &c.</i>,<br> In Bologna, Per Costantino Pisarri, sotto le Scuole all’Insegna di S. Michele, 1707. Fonte: google.com</big></big></center></p>
 <img src="img/celebri vignolesi/Bernardoni/secondaparte.jpg" width="400" height="590"><br><br><br>
 
 <p><center><big><big><i>Incipit</i> di <i>L’Eraclio. Dramma per musica del Signor Pietro Bernardoni, Rappresentato in Roma l’Anno 1712</i>,<br> In Roma, Per Antonio de’ Rossi alla Chiavica del Bufalo, s.d. [1712?]. Fonte: google.com</big></big></center></p>
@@ -99,7 +99,7 @@ L’incisione di Guzzi apre la dispensa su Bernardoni, il cui testo scritto è f
 
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
