--- a/Roli.html
+++ b/Roli.html
@@ -51,7 +51,7 @@ Roli morì a Vignola il 25 giugno 1959 e venne inumato nel cimitero cittadino.<b
 Il Gruppo di Documentazione “Mezaluna - Mario Menabue” di Vignola e la famiglia del nostro personaggio, in collaborazione con la Fondazione di Vignola e il “Circolo Paradisi” (sorto nel 2006 dall’unione del già menzionato “Circolo Amicizia” con un altro ente sociale vignolese, il “Club Jacopo Barozzi”, istituito nel 1975 con scopi ricreativi e artistico-culturali), hanno allestito una mostra monografica dal titolo <i>Ugo Roli da Vignola</i>, tenutasi nelle Sale della Meridiana della rocca cittadina dal 7 al 15 ottobre 2017.</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 
-<p><center><big><big>Fotografia che ritrae Roli nella prima maturità.</big></big></center><br>
+<p><center><big><big>Fotografia che ritrae Roli nella primissima maturità.</big></big></center><br>
 <center><img src="img/celebri vignolesi/Roli Ugo/roligiovane.jpg" width="480" height="630"></center><br><br>
 	<p><center><big><big>Prima di copertina di Ugo Roli (Fiordaliso), <i>Faléster. Poesie dialettali modenesi</i>, prefazione del gr. uff. on. Fausto Bianchi,<br> Modena, Dante Cavallotti, 1936; le xilografie sono di Benito Boccolari. Fonte: google.com</big></big></center><br>
 		<center><img src="img/celebri vignolesi/Roli Ugo/prima.jpg" width="480" height="650"></center><br><br>
