--- a/Neri2.html
+++ b/Neri2.html
@@ -66,9 +66,9 @@ A Nèttore Neri sono attualmente intitolate la Biblioteca Comunale di Barbiano e
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 
-<p><big><big><center>Neri fotografato nella prima maturità; il berrettino che egli indossa si chiama, in dialetto romagnolo, «galòza» (o «calòta»).<br> L’immagine fu inserita, qualche tempo dopo essere stata scattata, in <i>Blightrìgh e smaréj</i>, raccolta sulla quale vedi poco oltre.</center></big></big></p>
+<p><big><big><center>Un'immagine di Neri nella prima maturità; il berrettino che egli indossa si chiama, in dialetto romagnolo, «galòza» (o «calòta»).<br> Alcuni anni dopo essere stata scattata, questa fotografia venne inserita (fuori testo)<br> in <i>Blightrìgh e Smaréj (Canted)</i>, raccolta sulla quale vedi poco oltre.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri2/nettore.jpg" width="500" height="665"></center><br><br>
-
+	
 <p><big><big><center>Neri al suo arrivo a Vignola come pretore, accolto dalle massime autorità del paese (1924).<br> Il nostro personaggio è al centro e tiene per mano il figlioletto <strong>Attilio</strong>.<br> L’autore dello scatto fu il rinomato fotografo modenese Umberto Orlandini (1879-1931).<br>
  Fonte: collezione di Attilio Neri, ora Fondo fotografico Attilio Neri di proprietà del Comune di Vignola.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri2/autorità.jpg" width="950" height="665"></center><br><br>
@@ -76,10 +76,8 @@ A Nèttore Neri sono attualmente intitolate la Biblioteca Comunale di Barbiano e
 <p><big><big><center>Ritratto fotografico di Neri proveniente da <i>Arsoj. Biöjch rumagnoli cun dò parol d’Spaldo</i><br> [Rimasuglio. Bioccoli romagnoli con due parole di Spaldo], Vignòla, Stamparéja A. Monti d’E. Fabbri, 1939;<br> è una tavola fuori testo, collocata subito prima di un breve scritto senza titolo di Aldo Spallicci,<br> da considerarsi l’introduzione all’opera (pp. [I]-III). «Spaldo» era un soprannome dello stesso Spallicci.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri2/ritratto.jpg" width="400" height="665"></center><br><br>
 
-<p><big><big><center>Prima di copertina di <i>Blightrìgh e smaréj (Canted)</i> [Cose di poco conto e sciocchezze], Lugh, Stampareja di Ferretti, 1932.<br> 
-C’è una presentazione di Aldo Spallicci; gli autori delle illustrazioni sono l’imolese Tommaso Della Volpe (1883-1964)<br> 
-e il modenese Ferdinando Cavicchioli (1863-1941). Si tratta del primo libro pubblicato da Neri<br>
-ed è l’unico che sia stato posto in vendita. Fonte: google.com</center></big></big></p>
+<p><big><big><center>Prima di copertina di <i>Blightrìgh e smaréj (Canted)</i> [Cose di poco conto e sciocchezze (Cantate)], Lugh, Stampareja di Ferretti, 1932.<br>
+Il volumetto contiene una raccolta di versi di Neri, una premessa di Aldo Spallicci<br> e illustrazioni dell’imolese Tommaso Della Volpe (1883-1964) e del modenese Ferdinando Cavicchioli (1863-1941).<br> Si tratta del primo libro pubblicato dal nostro autore ed è l’unico, tra i suoi, a essere stato posto in vendita.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri2/sciocchezze.jpg" width="480" height="665"></center><br><br>
 
 <p><big><big><center>Prima di copertina di <i>Blén e schlén (Canted)</i> [Frammenti e schegge di legno (Cantate)],<br> Lugh, Stamparèja di Ferretti, 1934 (una edizione) e 1935 (due edizioni).<br> È presente un proemio di A.B. [Antonio Baldini?]. Libro decorato dal pittore cotignolese Luigi Varoli. Fonte: google.com</center></big></big></p>
