--- a/giugno.html
+++ b/giugno.html
@@ -62,6 +62,19 @@ Nell’immagine sottostante, Casimiro Bettelli nella prima maturità. Fonte: <st
 <img src="img/celebri vignolesi/Bettelli/giovane.jpg" width="470" height="700"><br><br>
 <p><strong><big><center>Vuoi saperne di più su Casimiro Bettelli?<br>Allora, visita il suo <a href="Bettelli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br>
 
+<p class="index-p3"><strong>14 giugno 1702</strong>: morì a Doccia di Savignano <strong>PIETRO ERCOLE BELLOI</strong> (o <strong>BELLOJ</strong>), politico, diplomatico, letterato, scacchista e – negli ultimi anni di vita – anche sacerdote. La salma venne tumulata a Vignola, nell’oratorio di San Pietro Martire.<br><br> 
+
+Pietro Ercole Belloi nacque a Vignola il 20 settembre 1634. Diciannovenne, egli conseguì la laurea <i>in utroque iure</i> all’Università di Bologna. Nel 1655 sposò Maria Giovanna Montacuti (o Montaguti, 1642-1687), dalla quale ebbe i figli <strong>Domenico</strong> (1660-1712), Giacoma e Giovanna. Per molti anni, esercitò cariche politiche in vari luoghi. Nel 1673 venne iscritto alla cittadinanza felsinea; da questa data, di frequente egli amò dichiararsi bolognese.<br>
+Rimasto vedovo nel 1687, Belloi entrò come novizio nel monastero di Santo Spirito dei Padri Celestini presso Sulmona, ma poi ne scappò. Nel decennio seguente, egli fu più volte a Milano sia come segretario di membri della nobiltà locale sia alla ricerca di un impiego; dal 1695, nel corso dei suoi vari soggiorni nella città meneghina, ebbe occasione di frequentare i conterranei <strong>Pietro Antonio Bernardoni</strong> (1672-1714) e <strong>Lodovico Antonio Muratori</strong> (1672-1750).<br>
+Nel 1693 Belloi fu ambasciatore straordinario di Carlo II di Spagna (1661-1700, in carica dal 1665) al papa Innocenzo XII (1615-1700, sul soglio di Pietro dal 1691); due anni più tardi, diventato segretario di monsignor Giovanni Antonio Davia (1660-1740), nunzio apostolico a Colonia, lo accompagnò in quel luogo, dove il Vignolese ottenne le dispense necessarie per prendere gli ordini sacri; tornato in Italia, egli li ricevette a Parma dal vescovo della città, Giuseppe Olgiati (1660-1736).<br>
+In seguito, il nostro personaggio fu per breve tempo precettore di Lodovico Rangoni (m. 1762), figlio di Filippo (m. 1723), e il 30 agosto 1696 celebrò la sua prima messa a Spilamberto.<br>
+Belloi pubblicò apprezzati versi latini e fu socio di importanti Accademie italiane. Ebbe una certa fama come scacchista.<br><br> 
+
+Nell’immagine, frontespizio di una delle più note raccolte poetiche in latino di Belloi: <i>Adoreolæ Belloianæ pro Catholicis Heroibus in Propvgnatione Avstriacæ Viennæ</i> […]; si tratta di un’opera data alle stampe a Bologna, presso la Chalcographia Montiana, nel 1684. Fonte: google.com </p><br><br>
+<img src="img/celebri vignolesi/Bettelli/.jpg" width="470" height="700"><br><br>
+<p><strong><big><center>Vuoi saperne di più su Pietro Ercole Belloi?<br>Allora, visita il suo <a href="Belloi2.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br>
+  
+  
 <p class="index-p3"><strong>23 giugno 1747</strong>: nacque a Vignola <strong>GIUSEPPE MARIA SOLI</strong> (alle volte chiamato semplicemente <strong>Giuseppe Soli</strong>), architetto, ingegnere, pittore e insegnante.<br><br>  
 
 Di umili origini, Giuseppe Maria Soli mostrò già da bambino un eccezionale talento nel disegno. Grazie a mecenati e sostegni di varia natura, egli ricevette un’approfondita formazione artistica dapprima a Bologna e poi a Roma.<br> 
