--- a/giugno.html
+++ b/giugno.html
@@ -71,7 +71,7 @@ In seguito, il nostro personaggio fu per breve tempo precettore di Lodovico Rang
 Belloi pubblicò apprezzati versi latini e fu socio di importanti Accademie italiane. Ebbe una certa fama come scacchista.<br><br> 
 
 Nell’immagine, frontespizio di una delle più note raccolte poetiche in latino di Belloi: <i>Adoreolæ Belloianæ pro Catholicis Heroibus in Propvgnatione Avstriacæ Viennæ</i> […]; si tratta di un’opera data alle stampe a Bologna, presso la Chalcographia Montiana, nel 1684. Fonte: google.com </p><br><br>
-<img src="img/celebri vignolesi/Bettelli/.jpg" width="470" height="700"><br><br>
+<img src="img/celebri vignolesi/Belloi/1684.jpeg" width="450" height="700"><br><br>
 <p><strong><big><center>Vuoi saperne di più su Pietro Ercole Belloi?<br>Allora, visita il suo <a href="Belloi2.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br>
   
   
