--- a/Belloi1.html
+++ b/Belloi1.html
@@ -47,11 +47,13 @@ Rimasto vedovo nel 1710, Belloi vestì l’abito talare (anche il padre, perduta
 
 Vignola lo ricorda oggigiorno con una targa posta sulla facciata della casa natale (che si trova nell’odierna Via Garibaldi) e con una strada a lui intitolata (accanto al Palazzo Contrari o Boncompagni o Boncompagni Ludovisi, detto più comunemente – ma in maniera impropria – Palazzo Barozzi).</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
-<p><center><big><big>Casa natale di Belloi, situata nell’attuale Via Garibaldi (già Via Maggiore).<br> Questa fotografia risale al 2021; nell’ottobre 2022 è stata rimossa la storica edicola all’ingresso del portico di Via Soli.</big></center><br>
-<img src="img/celebri vignolesi/Belloi/Casa natale.jpg" width="800" height="700"></p><br>
+<p><center><big><big>Fotografia recente della facciata della casa natale di Domenico Belloi (e anche del padre Pietro Ercole).<br> L'edificio si trova lungo l’attuale Via Garibaldi, e per la precisione di fronte alla chiesa dei Santi Nazario e Celso.</big></center><br>
+<img src="img/celebri vignolesi/Belloi/casanatale.jpg" width="810" height="600"></p><br>
+<p><big><big><center>Lapide apposta sulla facciata della casa natale.</center></big></big></p>
+<img src="img/celebri vignolesi/Belloi/lapide.JPG" width="680" height="650"><br><br><br>
 <p><big><center>Frontespizio della prima edizione (postuma) del <i>De Vineolae moderniori statu chronica enarratio</i>,<br> l’opera più importante e celebre di Belloi, che la redasse dal 1704 al 1706.<br> Questo volume, curato da <strong>Alessandro Plessi</strong>, uscì per i tipi bolognesi di Nicola Zanichelli nel 1872.</big></center></p>
 <img src="img/celebri vignolesi/Belloi/Vineolae Chronica.jpg" width="400" height="650"><br>
-<p><big><center>Prima di copertina di <i>Del più moderno stato di Vignola cronaca del Dott. Chierico Domenico Belloj</i>,<br> volgarizzazione e note di Bernardo Soli, Modena, Tipografia G. Ferraguti & C., Modena, 1935. Fonte: collezione privata.</big></center></p>
+<p><big><center>Prima di copertina di <i>Del più moderno stato di Vignola cronaca del Dott. Chierico Domenico Belloj</i>,<br> volgarizzazione e note di Bernardo Soli, Modena, Tipografia G. Ferraguti & C., Modena, 1935. <br> L’esemplare qui fotografato appartiene a una collezione privata.</big></center></p>
 <img src="img/celebri vignolesi/Belloi/prima.jpg" width="510" height="690"><br><br>
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong><br>
 </section>
