--- a/Pippo.html
+++ b/Pippo.html
@@ -115,7 +115,7 @@ Rientrato stabilmente in Italia, Simonini ha scelto di fissare la propria dimora
 <img src="img/celebri vignolesi/Pippo/pippodipinge.JPG" width="850" height="660"></p><br>
 <p><big><center>Simonini, <i>Paris, bistrot rue Mouftard</i>, olio su tela, collezione privata (2022).</center></big><br>
 <img src="img/celebri vignolesi/Pippo/quadrofinito.jpg" width="540" height="650"></p><br><br><br>
-<p><big><center>Simonini in compagnia degli amici Giovanni Romani (alla sua sinistra) e Raffaele Montanari (alla sua destra).<br> Questa fotografia è stata scattata ieri sera.</center></big></p><br>
+<p><big><center>Simonini in compagnia degli amici Giovanni Romani (alla sua destra) e Raffaele Montanari (alla sua sinistra).<br> Questa fotografia è stata scattata il 16 luglio 2023.</center></big></p><br>
 <img src="img/celebri vignolesi/Pippo/romani.jpg" width="430" height="590"></p><br><br><br>
 
 
