--- a/Belloi1.html
+++ b/Belloi1.html
@@ -45,13 +45,13 @@ Vanno anche ricordate altre due sue opere, redatte nello stesso periodo e lascia
 
 Rimasto vedovo nel 1710, Belloi vestì l’abito talare (anche il padre, perduta la moglie, si era fatto prete) e spirò a Vignola il 27 luglio 1712. Fu sepolto nella chiesa dei Cappuccini esistente allora da dieci anni in paese e intitolata all’Immacolata Concezione; i suoi resti mortali andarono poi dispersi (ciò accadde poco dopo il 1805, quando le normative napoleoniche portarono alla soppressione dell’annesso convento, imponendo il trasporto delle ossa dei defunti al nuovo cimitero, e quelle del nostro personaggio non vennero ritrovate).<br>  
 
-Vignola lo ricorda oggigiorno con una targa posta sulla facciata della casa natale (che si trova nell’odierna Via Garibaldi) e con una strada a lui intitolata (accanto al Palazzo Contrari o Boncompagni o Boncompagni Ludovisi, detto più comunemente – ma in maniera impropria – Palazzo Barozzi).</big></p><br><br><br>
+Vignola lo ricorda oggigiorno con una lapide apposta sulla facciata della casa natale (che si trova nell’odierna Via Garibaldi) e con una strada a lui intitolata (accanto al Palazzo Contrari o Boncompagni o Boncompagni Ludovisi, detto più comunemente – ma in maniera impropria – Palazzo Barozzi).</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><center><big><big>Fotografia recente della facciata della casa natale di Domenico Belloi (e anche del padre Pietro Ercole).<br> L’edificio si trova lungo l’attuale Via Garibaldi, e per la precisione di fronte alla chiesa dei Santi Nazario e Celso.</big></center><br>
 <img src="img/celebri vignolesi/Belloi/casanatale.jpg" width="810" height="600"></p><br>
 <p><big><center>Lapide apposta sulla facciata della casa natale.</center></big></p>
 <img src="img/celebri vignolesi/Belloi/lapide.JPG" width="680" height="650"><br><br><br>
-<p><big><center>Frontespizio della prima edizione (postuma) del <i>De Vineolae moderniori statu chronica enarratio</i>,<br> l’opera più importante e celebre di Belloi, che la redasse dal 1704 al 1706.<br> Questo volume, curato da <strong>Alessandro Plessi</strong>, uscì per i tipi bolognesi di Nicola Zanichelli nel 1872.</big></center></p>
+<p><big><center>Frontespizio della prima edizione (postuma) di <i>De Vineolae moderniori statu chronica enarratio</i>,<br> l’opera più importante e celebre di Belloi, che la redasse dal 1704 al 1706.<br> Questo volume, curato da <strong>Alessandro Plessi</strong>, uscì per i tipi bolognesi di Nicola Zanichelli nel 1872.</big></center></p>
 <img src="img/celebri vignolesi/Belloi/Vineolae Chronica.jpg" width="400" height="650"><br><br>
 <p><big><center>Prima di copertina di <i>Del più moderno stato di Vignola cronaca del Dott. Chierico Domenico Belloj</i>,<br> volgarizzazione e note di Bernardo Soli, Modena, Tipografia G. Ferraguti & C., Modena, 1935. <br> L’esemplare qui fotografato appartiene a una collezione privata.</big></center></p>
 <img src="img/celebri vignolesi/Belloi/prima.jpg" width="510" height="690"><br><br>
