--- a/Belloi1.html
+++ b/Belloi1.html
@@ -45,7 +45,7 @@ Vanno anche ricordate altre due sue opere, redatte nello stesso periodo e lascia
 
 Rimasto vedovo nel 1710, Belloi vestì l’abito talare (anche il padre, perduta la moglie, si era fatto prete) e spirò a Vignola il 27 luglio 1712. Fu sepolto nella chiesa dei Cappuccini esistente allora da dieci anni in paese e intitolata all’Immacolata Concezione; i suoi resti mortali andarono poi dispersi (ciò accadde poco dopo il 1805, quando le normative napoleoniche portarono alla soppressione dell’annesso convento, imponendo il trasporto delle ossa dei defunti al nuovo cimitero, e quelle del nostro personaggio non vennero ritrovate).<br>  
 
-Vignola lo ricorda oggigiorno con una lapide apposta sulla facciata della casa natale (che si trova nell’odierna Via Garibaldi) e con una strada a lui intitolata (accanto al Palazzo Contrari o Boncompagni o Boncompagni Ludovisi, detto più comunemente – ma in maniera impropria – Palazzo Barozzi).</big></p><br><br><br>
+Vignola lo ricorda oggigiorno con una lapide apposta sulla facciata della casa natale (che si trova nell’odierna Via Garibaldi) e con una strada a lui intitolata (accanto al Palazzo Contrari o Boncompagni o Boncompagni Ludovisi, da tempo detto più comunemente – ma in maniera impropria – Palazzo Barozzi).</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><center><big><big>Fotografia recente della facciata della casa natale di Domenico Belloi (e anche del padre Pietro Ercole).<br> L’edificio si trova lungo l’attuale Via Garibaldi, e per la precisione di fronte alla chiesa dei Santi Nazario e Celso.</big></center><br>
 <img src="img/celebri vignolesi/Belloi/casanatale.jpg" width="810" height="600"></p><br>
