--- a/Bernardoni.html
+++ b/Bernardoni.html
@@ -69,11 +69,9 @@
 
  
 	<h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
-<p class="index-p10">Giuseppe Guzzi (notizie tra il 1834 e il 1842), ritratto postumo di Pietro Antonio Bernardoni, incisione, ​<br> a partire da un disegno fatto dal vivo. Fonte: <i>Iconografia dei celebri vignolesi. Opera edita per cura di Francesco Selmi</i>,​ <br>Modena, A spese di Giuseppe Lupi librajo, 1839. Il piccolo libro in oggetto è una pubblicazione periodica di natura collettiva​<br> costituita di sette dispense singole (le quali presentano in alcuni casi note tipografiche parzialmente diverse da quelle ​<br> che si trovano nel volumetto rilegato, ad esempio «Presso il libraio Giuseppe Luppi»; quest’ultimo, peraltro, risulta​<br> il nome corretto del libraio modenese), così intitolate: <i>Jacopo Cantelli</i>, <i>Lodovico Antonio Muratori</i>, ​<br> <i>Jacopo Barozzi da Vignola</i>, <i>Pietro Antonio Bernardoni</i>, <i>Agostino Paradisi</i>, <i>Giuseppe Soli</i>, <i>Veronica Cantelli Tagliazucchi</i>. ​<br>
-L’incisione di Guzzi apre la dispensa su Bernardoni, il cui testo scritto è firmato in calce «P……».</p>
-
+<p class="index-p12"><big>Giuseppe Guzzi (notizie tra il 1834 e il 1842), ritratto postumo di Pietro Antonio Bernardoni, incisione, a partire da un disegno fatto dal vivo. Fonte: <i>Iconografia dei celebri vignolesi. Opera edita per cura di Francesco Selmi</i>, Modena,A spese di Giuseppe Lupi librajo, 1839. Il piccolo libro in oggetto è una pubblicazione periodica di natura collettiva costituita di sette dispense singole (le quali presentano in alcuni casi note tipografiche parzialmente diverse da quelle che si trovano nel volumetto rilegato, ad esempio «Presso il libraio Giuseppe Luppi»; quest’ultimo, peraltro, risulta il nome corretto del libraio modenese), così intitolate: <i>Jacopo Cantelli</i>, <i>Lodovico Antonio Muratori</i>, <i>Jacopo Barozzi da Vignola</i>, <i>Pietro Antonio Bernardoni</i>, <i>Agostino Paradisi</i>, <i>Giuseppe Soli</i>, <i>Veronica Cantelli Tagliazucchi</i>. L’incisione di Guzzi apre la dispensa su Bernardoni, il cui testo scritto è firmato in calce «P……».</big></p>
 <img src="img/celebri vignolesi/Bernardoni/Incisione.jpg" width="450" height="770"><br><br><br>
-
+	
 <p><center><big><big>Frontespizio di <i>Rime varie, consagrate alla S.C.R. Maestà di Giuseppe I. August.mo Imperator de’ Romani, ​<br> da Pietro Antonio Bernardoni Poeta Cesareo, et Accademico Gelato, Arcade, Scomposto, Animoso, et Acceso,</i> ​<br> Vienna d’Austria, Appresso Gio. Van Ghelen, 1705. Fonte: collezione privata.</big></big></center></p>
 <img src="img/celebri vignolesi/Bernardoni/rimevarie.jpg" width="440" height="590"><br><br><br>
 
