--- a/giugno.html
+++ b/giugno.html
@@ -58,7 +58,7 @@ Importante collezionista specializzato nell’arte del XX secolo, don Bettelli a
 Il nostro personaggio rimase sempre molto legato alla comunità d’origine e fu in stretti rapporti d’amicizia con <strong>Augusta Redorici Roffi</strong> (1922-2010).<br>
 Don Bettelli morì nella sua città d’adozione il 9 agosto 1998 (sulla lastra tombale, però, risulta erroneamente indicato il giorno 8 agosto 1998) e fu sepolto nel cimitero di Campiglio.</br><br>
 
-Nell’immagine sottostante, Casimiro Bettelli nella prima maturità. Fonte: <strong>Augusta Redorici Roffi</strong> (1922-2010), <i>Le Chiese di Campiglio. Memoria</i>, Vignola, Libreria “dei Contrari”, 2000, p. 124.</p><br><br>
+Nell’immagine sottostante, Casimiro Bettelli fotografato nella prima maturità. Fonte: <strong>Augusta Redorici Roffi</strong>, <i>Le Chiese di Campiglio. Memoria</i>, Vignola, Libreria “dei Contrari”, 2000, p. 124.</p><br><br>
 <img src="img/celebri vignolesi/Bettelli/giovane.jpg" width="470" height="700"><br><br>
 <p><strong><big><center>Vuoi saperne di più su Casimiro Bettelli?<br>Allora, visita il suo <a href="Bettelli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br>
 
