--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -107,7 +107,7 @@
 
 <tr>
 <td><big><big><strong><a href="cerfoglio.html">37. Il prato di cerfoglio</a></strong></td>
-<td><big><big><strong><a href="serpe.html">38. L’aquila e la serpe</a></strong></td></tr>
+<td><big><big><strong><a href="aquilaserpe.html">38. L’aquila e la serpe</a></strong></td></tr>
 
 <tr>
 <td><big><big><strong><a href="uovo.html">39. L’uovo prodigioso</a></strong></td>
