--- a/dicembre.html
+++ b/dicembre.html
@@ -64,7 +64,7 @@ Affetto da malaria, Degli Esposti morì a Vignola il 27 agosto 1923; fu sepolto 
 
 Il nostro personaggio e Caterina Pelosi (1896-1966), sposatisi nel 1916, ebbero il figlio Aristide (1920-1986), che godette di una certa fama nel campo dell’aviazione militare e civile. Questi, benché sia vissuto quasi sempre lontano da Vignola, decise di farsi inumare accanto al padre e alla madre.<br><br>
 
-Nell’immagine, una fotografia che ritrae Amleto Degli Esposti in divisa da sottotenente degli Specialisti del Genio (1918). Fonte: Massimo Bazzani - Carlo Alberto Cavazzoni - Giampaolo Grandi - Gianluca Sandoni, <i>Amleto e Aristide Degli Esposti eroici aviatori, vignolesi</i>, Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”, Savignano sul Panaro (MO), Tipolitografia F.G., 2010, p. 62.</big></p><br><br>
+Nell’immagine, una fotografia che ritrae Amleto Degli Esposti in divisa da sottotenente degli Specialisti del Genio (1918). Fonte: Massimo Bazzani - Carlo Alberto Cavazzoni - Giampaolo Grandi - Gianluca Sandoni, <i>Amleto e Aristide Degli Esposti eroici aviatori, vignolesi</i>, Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”, Savignano sul Panaro (MO), Tipolitografia F.G., 2010, p. 62; dall’Archivio Famiglia Degli Esposti.</big></p><br><br>
 <center><img src="img/celebri vignolesi/Degli Esposti Amleto/foto1.jpg" width="470" height="608"></center><br><br><br> 
 <p><strong><big><big><center>Vuoi saperne di più su Amleto Degli Esposti?<br>Allora, visita il suo <a href="amleto.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>  
   
