--- a/ovo.html
+++ b/ovo.html
@@ -40,7 +40,7 @@ Essa si slanciò ad abbracciarlo teneramente******** e stringerlo al seno, serra
 
 
 <p><big>* Sia qui sia nell’<i>Indice</i> finale, viene utilizzata la forma «uovo», alla quale tuttavia noi preferiamo la forma «ovo», essendo quest’ultima quella impiegata sempre da Selmi nel testo della presente favola (e, a dire la verità, è comunissima pure in altri suoi scritti, anche di natura scientifica).<br> 
-** Nell’originale, le parole del «ritornello» non sono tra caporali e si scrive «deh».
+** Nell’originale, le parole del «ritornello» non sono tra caporali e si scrive «deh».<br>
 *** Nell’originale, «perché».<br>
 **** Nell’originale, qui è presente una virgola (fra l’altro, in un caso simile collocato poco oltre, la virgola risulta assente).<br>
 ***** Nell’originale, «pezzetti, e quando».<br>
