--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -110,7 +110,7 @@
 <td><big><big><strong><a href="aquilaserpe.html">38. L’aquila e la serpe</a></strong></td></tr>
 
 <tr>
-<td><big><big><strong><a href="ovo.html">39. L’uovo prodigioso</a></strong></td>
+<td><big><big><strong><a href="ovo.html">39. L’ovo prodigioso</a></strong></td>
 <td><big><big><strong><a href="solazzo.html">40. Solazzo</a></strong></td></tr>
 
 <tr>
