--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -28,6 +28,10 @@
 </header>
 <section><br><br>
 <h2><big>CHI SIAMO?</big></h2><br><br><br>
+
+<p><strong><big><big>Cookie e Privacy Policy</big></big></strong></p><br>
+<p><big>Avvisiamo i gentili utenti che <i>Celebri Vignolesi</i> non utilizza cookie o tecnologie simili per funzionalità tecniche o per raccogliere ed elaborare dati personali dai dispositivi, mostrare pubblicità personalizzata, misurare la performance o migliorare il nostro servizio.</big></p><br><br> 
+ 
 <p><strong><big><big>Questo sito</big></big></strong></p><br>
 <p><big>Il presente sito è stato creato nel dicembre 2021 a Vignola (paese in provincia di Modena) con il primario intento di far conoscere meglio quei concittadini di nascita oppure di adozione che, nel tempo, si sono distinti nelle loro rispettive professioni e attività al punto da guadagnarsi stima e considerazione robuste non solo presso la comunità vignolese; questo è anche un modo per onorarne la memoria. Fino a oggi, sono state prese in considerazione esclusivamente figure ben documentate le quali abbiano avuto una carriera militare di alto livello e/o abbiano vantato particolari meriti in almeno uno dei seguenti settori: lettere, arti, scienze, politica.<br>  
 Soprattutto negli ultimi decenni, si rivela di frequente complicato rinvenire materiale divulgativo rigoroso, se non talora in forma sparsa, che sia capace di appagare la curiosità di chi risulti interessato ai temi in oggetto come – eventualmente – di incoraggiare ricerche condotte in prima persona. Alla luce di ciò, <i>Celebri Vignolesi</i> vuole offrire un’interfaccia che permetta all’utente di navigare senza smarrirsi, così da trovare facilmente le informazioni di maggior rilievo intorno alla vita e alle opere delle figure più illustri nate e/o vissute a Vignola. Nelle pagine del sito, inoltre, è riservato spazio a immagini, filmati e ricorrenze sulla comunità di riferimento e sulla sua storia.<br>
@@ -63,7 +67,7 @@ Lungi dall’offrire paradisi in terra o felicità definitive, la tradizione cos
 Ogni violazione di quanto premesso sarà perseguita a termini di legge.</big></p><br><br><br><br>
 
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
