--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -30,7 +30,7 @@
 <h2><big>CHI SIAMO?</big></h2><br><br><br>
 
 <p><strong><big><big>Cookie e Privacy Policy</big></big></strong></p><br>
-<p><big>Avvisiamo i gentili utenti che <i>Celebri Vignolesi</i> non utilizza cookie o tecnologie simili per funzionalità tecniche o per raccogliere ed elaborare dati personali dai dispositivi, mostrare pubblicità personalizzata, misurare la performance o migliorare il nostro servizio.</big></p><br><br> 
+<p><big>Avvisiamo i gentili utenti che <i>Celebri Vignolesi</i> non utilizza cookie o tecnologie simili né per funzionalità tecniche né per raccogliere ed elaborare dati personali dai dispositivi, mostrare pubblicità personalizzata, misurare la performance oppure migliorare il nostro servizio.</big></p><br><br> 
  
 <p><strong><big><big>Questo sito</big></big></strong></p><br>
 <p><big>Il presente sito è stato creato nel dicembre 2021 a Vignola (paese in provincia di Modena) con il primario intento di far conoscere meglio quei concittadini di nascita oppure di adozione che, nel tempo, si sono distinti nelle loro rispettive professioni e attività al punto da guadagnarsi stima e considerazione robuste non solo presso la comunità vignolese; questo è anche un modo per onorarne la memoria. Fino a oggi, sono state prese in considerazione esclusivamente figure ben documentate le quali abbiano avuto una carriera militare di alto livello e/o abbiano vantato particolari meriti in almeno uno dei seguenti settori: lettere, arti, scienze, politica.<br>  
