--- a/Santi.html
+++ b/Santi.html
@@ -52,6 +52,8 @@ Il nostro personaggio si spense a Vignola il 29 giugno 1964 (questa è la data p
 <img src="img/celebri vignolesi/Duca Borso/Santi nel suo studio 1.jpg" width="700" height="500"><br><br>
 <p><big><big><center><i>Incipit</i> di Al. [Aldo] S. [Santi], voce <i>Enimmistica</i>, in <i>Enciclopedia Italiana di Scienze, Lettere ed Arti</i>,<br> vol. XIII (<i>Dis-Enn</i>), s.l. [ma: Roma], Treves-Treccani-Tumminelli, Edizioni Istituto G. Treccani, 1932, pp. 991-993: 991.</big></big></p>
 <img src="img/celebri vignolesi/Duca Borso/enimmistica.jpg" width="500" height="620"><br><br><br>
+<p><big><big><center>Prima di copertina di <i>Dizionario pseudonimico degli Enigmografi Italiani.<br> 3000 pseudonimi alfabeticamente disposti coi corrispondenti nomi degli autori</i>,<br> Modena, Edizioni della Felce, 1956. Fonte: google.com</big></big></p>
+<img src="img/celebri vignolesi/Duca Borso/prima.jpg" width="430" height="600"><br><br><br>
 <p><big><big><center>Lastra tombale di Santi e alcuni familiari nel cimitero di Campiglio di Vignola.</big></big></p>
 <img src="img/celebri vignolesi/Duca Borso/Tomba Santi.jpg" width="500" height="700"><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
