--- a/Soli2.html
+++ b/Soli2.html
@@ -48,6 +48,8 @@
 <img src="img/celebri vignolesi/Soli Ivo/nudovirile.jpg" width="450" height="600"><br><br>
 <p><center><big><big><i>Fanciulla accovacciata</i> (1945-1948), bronzo. Dal 1994 in poi, Vignola, Via Selmi,<br> davanti alla porta di ingresso della casa natale di <strong>Lodovico Antonio Muratori</strong> (1672-1750).</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/statua.jpg" width="450" height="610"><br><br>
+<p><center><big><big>L’immobile vignolese ove Soli abitò negli ultimi anni di vita; è ubicato al civico 4 di Via Posterla.</big></big></center><br>
+<img src="img/celebri vignolesi/Soli Ivo/viaposterla.jpg" width="280" height="700"><br><br> 	
 <p><center><big><big><i>Fanciulla in piedi</i> (1970-1975), bronzo; collezione privata.</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Ivo/fanciullainpiedi.jpg" width="330" height="680"><br><br>
 <p><center><big><big>Soli intento a modellare il monumento a Carlo Porta, inaugurato nel 1966 al Verziere di Milano. Fonte: <i>Ivo Soli</i>, cit.</big></big></center><br>
