--- a/Santi.html
+++ b/Santi.html
@@ -46,10 +46,12 @@ Il nostro personaggio si spense a Vignola il 29 giugno 1964 (questa è la data p
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br>
 <p><big><big><center>Santi nella prima maturità. Fonte: Pippo [G. Riva] - Nam [M. Navona],<br> <i>Le riviste del passato</i>, «Il labirinto», a. V (2008), fasc. 1, pp. 72-81: 80. </big></big></p>
 <img src="img/celebri vignolesi/Duca Borso/Santi da giovane.jpg" width="500" height="600"><br><br>
+<p><big><big><center>Santi a Modena, ai “Baluardi San Pietro”, sul tracciato delle antiche mura (1911).<br> Fonte: Lui-sa, <i>Vignola 1924: sconcio nelle vicinanze del castello</i>, in Giampaolo Grandi (a cura di),<br> <i>37a festa dei ciliegi in fiore. Vignola dal 25 marzo al 6 maggio 2006. Annuario – 37a edizione – 2006</i>,<br> pubblicato dal Gruppo Redazionale del Centro Studi di Vignola, Savignano s.P. (MO), Tipolitografia F.G., 2006,<br> pp. 153-155 (ma a p. 154, integralmente, c’è una pubblicità): 155. Dall’Archivio L. Santi.</big></big></p>
+<img src="img/celebri vignolesi/Duca Borso/santispanizzo.jpg" width="630" height="500"><br><br>
 <p><big><big><center>Santi e la seconda moglie Margherita Zagnoli (1888-1974) in una foto tratta dal volume di<br> <strong>Augusta Redorici</strong> [<strong>Roffi</strong>] (1922-2010), <i>Tavernelle. Testimonianze e ricordi</i>,<br> Modena, Lito-Tipografia Paltrinieri, s.d. [ma: 1992], p. 92.</center></big></big></p>
 <img src="img/celebri vignolesi/Duca Borso/Santi.jpg" width="400" height="600"><br><br>
 <p><big><big><center>Santi nel suo studio. Fonte: <strong>Augusta Redorici Roffi</strong>,<br> <i>Le Chiese di Campiglio. Memoria</i>, Vignola, Libreria “dei Contrari”, 2000, p. 203.</big></big></p>
-<img src="img/celebri vignolesi/Duca Borso/Santi nel suo studio 1.jpg" width="700" height="500"><br><br>
+<img src="img/celebri vignolesi/Duca Borso/Santinelsuostudio1.jpg" width="700" height="500"><br><br>
 <p><big><big><center><i>Incipit</i> di Al. [Aldo] S. [Santi], voce <i>Enimmistica</i>, in <i>Enciclopedia Italiana di Scienze, Lettere ed Arti</i>,<br> vol. XIII (<i>Dis-Enn</i>), s.l. [ma: Roma], Treves-Treccani-Tumminelli, Edizioni Istituto G. Treccani, 1932, pp. 991-993: 991.</big></big></p>
 <img src="img/celebri vignolesi/Duca Borso/enimmistica.jpg" width="500" height="620"><br><br><br>
 <p><big><big><center>Prima di copertina di <i>Dizionario pseudonimico degli Enigmografi Italiani.<br> 3000 pseudonimi alfabeticamente disposti coi corrispondenti nomi degli autori</i>,<br> Modena, Edizioni della Felce, 1956. Fonte: google.com</big></big></p>
