--- a/novembre.html
+++ b/novembre.html
@@ -59,11 +59,17 @@ Nell’immagine sottostante, lapide in ricordo di don Rodolfi murata nell’area
 <img src="img/celebri vignolesi/Rodolfi Giovanni/cimitero.jpg" width="780" height="470"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Giovanni Rodolfi?<br>Allora, visita il suo <a href="Rodolfi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
   
-<p><big><strong>30 novembre 1695</strong>: morì a Modena <strong>GIACOMO</strong> (detto <strong>Jacopo</strong>) <strong>CANTELLI</strong>, cartografo, geografo e bibliotecario. Fu sepolto nella locale chiesa di San Pietro.<br><br>
-Giacomo Cantelli venne battezzato il 23 febbraio 1643 a Monteorsello (oggi Monteorsello di Guiglia), borgo che allora apparteneva al Marchesato di Vignola. Per questa ragione, egli aggiunse non di rado al proprio nome espressioni quali «Vignolese», «da Vignola» o «Vineolensis».<br>  
-Il nostro personaggio studiò a Bologna e poi elesse a propria dimora questa città, anche se egli non mancò di soggiornare in diverse località italiane e a Parigi.<br>
-A meno di quarant’anni, Cantelli era già celebre a livello internazionale per le sue carte geografiche, molte delle quali vennero pubblicate a Roma, nella raccolta di carte dal titolo <i>Mercurio Geografico</i>, a partire dal 1679. Dal 1686 alla morte, egli abitò a Modena, dove fu geografo presso la corte estense e (almeno dal 1689) anche bibliotecario della «Ducal Libraria».<br>
-Cantelli intrattenne buoni rapporti non solo con illustri letterati e scienziati che vivevano nelle principali città italiane e a Parigi, ma anche con quattro significativi uomini di cultura vignolesi, cioè <strong>Pietro Ercole Belloi</strong> (1634-1702) e il figlio <strong>Domenico</strong> (1660-1712), e i giovanissimi <strong>Pietro Antonio Bernardoni</strong> (1672-1714) e <strong>Lodovico Antonio Muratori</strong> (1672-1750).</p><p>Nell’immagine qui sotto, frontespizio della raccolta <i>Mercurio Geografico</i> […], In Roma, Alla Pace, All’insegna di Parigi, s.d. [ma: fine XVII secolo]. In essa vennero pubblicate molte carte geografiche di Cantelli.</p><br><br>
+<p><big><strong>30 novembre 1695</strong>: morì a Modena <strong>GIACOMO</strong> – detto <strong>Jacopo</strong> – <strong>CANTELLI</strong>, geografo, cartografo e bibliotecario. Fu sepolto nella locale chiesa di San Pietro Apostolo.<br><br>  
+
+Giacomo Cantelli venne battezzato il 22 febbraio 1643 a Monteorsello (oggi Monteorsello di Guiglia), borgo che allora apparteneva al Marchesato di Vignola. Per questa ragione, oltre al fatto che molto probabilmente abitò per la seconda metà dell’infanzia e nel periodo dell’adolescenza a Vignola, egli aggiunse non di rado al proprio nome espressioni quali «Vignolese», «da Vignola» o «Vineolensis».<br>  
+
+Cantelli studiò a Bologna e poi elesse a propria dimora quella città, anche se non mancò di soggiornare in diverse altre località italiane e a Parigi.<br>  
+
+A meno di quarant’anni, il nostro personaggio era già celebre a livello internazionale per le sue carte geografiche, molte delle quali vennero pubblicate a Roma, nella raccolta di carte dal titolo <i>Mercurio Geografico</i>, a partire dal 1679.<br>  
+
+Dal 1686 alla morte, Cantelli abitò a Modena, dove fu geografo della regnante famiglia estense e (almeno dal 1689) bibliotecario della «Ducal Libraria».<br>  
+
+Il nostro personaggio intrattenne buoni rapporti non solo con illustri letterati e scienziati che vivevano nelle principali città italiane e a Parigi, ma anche con quattro significativi uomini di cultura vignolesi, cioè <strong>Pietro Ercole Belloi</strong> (1634-1702) e il figlio <strong>Domenico</strong> (1660-1712), e i giovanissimi <strong>Pietro Antonio Bernardoni</strong> (1672-1714) e <strong>Lodovico Antonio Muratori</strong> (1672-1750).</p><p>Nell’immagine qui sotto, frontespizio della raccolta <i>Mercurio Geografico</i> […], In Roma, Alla Pace, All’insegna di Parigi, s.d. [ma: fine XVII secolo]. In essa vennero pubblicate molte carte geografiche di Cantelli.</p><br><br>
 <img src="img/celebri vignolesi/Cantelli/Mercurio geografico.jpg" width="400" height="600"><br><br>
  <p><strong><big><center>Vuoi saperne di più su Giacomo Cantelli?<br>Allora, visita il suo <a href="Cantelli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
  
