--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -60,7 +60,7 @@ Lungi dall’offrire paradisi in terra o felicità definitive, la tradizione cos
 È caporedattore della rivista «Montesquieu.it» e redattore dell’omonima biblioteca elettronica. È redattore anche della rivista «Il Senso della Repubblica nel XXI secolo».</big></p><br><br>
 
 <p><strong><big><big>Ringraziamenti</big></big></strong></p><br>
-<p><big>Si ringraziano per la cortese e generosa disponibilità: Pierluigi Albertini, Stefano Baccolini, Giovanni Bartoli e Lily Roglia, Alessandro Carboni, Maria Pia Corsini, Giorgio Fliskunakis, Marco Fornaciari, Angela Giansante, Maurizio Maggi.</big></p><br><br><br>
+<p><big>Si ringraziano per la cortese e generosa disponibilità: Pierluigi Albertini, Stefano Baccolini, Giovanni Bartoli e Lily Roglia, Alessandro Carboni, Maria Pia Corsini, Giorgio Fliskunakis, Marco Fornaciari, Angela Giansante, Maurizio Maggi, Raffaele Montanari.</big></p><br><br><br>
 
 <p><strong><big><big>Copyright</big></big></strong></p><br>
 <p><big>I contenuti pubblicati in questo sito non possono essere replicati, neanche parzialmente, in altri siti web, libri, riviste o supporti editoriali senza la preventiva autorizzazione del detentore dei diritti, indipendentemente dalla finalità. L’autorizzazione va chiesta per iscritto via posta elettronica a <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a>.
