--- a/candela.html
+++ b/candela.html
@@ -50,38 +50,39 @@ Venne indi l’aurora, e colui che staccava i palloni della luminaria, quando ar
 Meglio brevi giorni ma onorati, gloriosi, che lunghi anni di vita turpe e vile.</big></p><br><br><br>
 
 
-<p><big>* Nell’originale, qui è presente una virgola. 
- ** Nell’originale, qui è presente una virgola.
- *** Nell’originale, qui è presente una virgola. 
- **** Nell’originale, qui è presente una virgola.
- ***** Nell’originale, qui è presente una virgola.
- ****** Nell’originale, qui è presente una virgola.
- ******* Nell’originale, qui non è presente una virgola.
- ******** Nell’originale, qui non è presente una virgola.
- ******** Nell’originale, qui è presente una virgola.
- ********* Nell’originale, qui è presente una virgola.
- ********** Nell’originale, qui non è presente una virgola.
- *********** Nell’originale, qui non è presente una virgola.
- ************ Nell’originale, qui è presente una virgola.
- ************* Nell’originale, qui è presente una virgola.
- ************** Nell’originale, «sé: se». 
- *************** Nell’originale, qui è presente una virgola.
- **************** Nell’originale, qui non è presente una virgola. 
- ***************** Nell’originale, «aria? –».
- ****************** Nell’originale, qui è presente una virgola.
- ******************* Nell’originale, qui è presente una virgola. 
- ******************** Nell’originale, «inasprito, onde mal».
- ********************* Nell’originale, qui è presente una virgola.
- ********************** Nell’originale, qui è presente una virgola.
- *********************** Nell’originale, qui è presente una virgola.
- ************************ Nell’originale, qui è presente una virgola. 
- ************************* Nell’originale, «interno, che ti».
- ************************** Nell’originale, qui è presente una virgola. 
- *************************** Nell’originale, qui è presente una virgola. 
- **************************** Nell’originale, «propositi: fatta».
- ***************************** Nell’originale, «mezzo, e per».
- ****************************** Nell’originale, qui non è presente una virgola.
- ******************************* Nell’originale, qui è presente una virgola.
+
+<p><big>* Nell’originale, qui è presente una virgola.<br> 
+ ** Nell’originale, qui è presente una virgola.<br>
+ *** Nell’originale, qui è presente una virgola.<br> 
+ **** Nell’originale, qui è presente una virgola.<br>
+ ***** Nell’originale, qui è presente una virgola.<br>
+ ****** Nell’originale, qui è presente una virgola.<br>
+ ******* Nell’originale, qui non è presente una virgola.<br>
+ ******** Nell’originale, qui non è presente una virgola.<br>
+ ******** Nell’originale, qui è presente una virgola.<br>
+ ********* Nell’originale, qui è presente una virgola.<br>
+ ********** Nell’originale, qui non è presente una virgola.<br>
+ *********** Nell’originale, qui non è presente una virgola.<br>
+ ************ Nell’originale, qui è presente una virgola.<br>
+ ************* Nell’originale, qui è presente una virgola.<br>
+ ************** Nell’originale, «sé: se».<br> 
+ *************** Nell’originale, qui è presente una virgola.<br>
+ **************** Nell’originale, qui non è presente una virgola.<br> 
+ ***************** Nell’originale, «aria? –».<br>
+ ****************** Nell’originale, qui è presente una virgola.<br>
+ ******************* Nell’originale, qui è presente una virgola.<br> 
+ ******************** Nell’originale, «inasprito, onde mal».<br>
+ ********************* Nell’originale, qui è presente una virgola.<br>
+ ********************** Nell’originale, qui è presente una virgola.<br>
+ *********************** Nell’originale, qui è presente una virgola.<br>
+ ************************ Nell’originale, qui è presente una virgola.<br> 
+ ************************* Nell’originale, «interno, che ti».<br>
+ ************************** Nell’originale, qui è presente una virgola.<br> 
+ *************************** Nell’originale, qui è presente una virgola.<br> 
+ **************************** Nell’originale, «propositi: fatta».<br>
+ ***************************** Nell’originale, «mezzo, e per».<br>
+ ****************************** Nell’originale, qui non è presente una virgola.<br>
+ ******************************* Nell’originale, qui è presente una virgola.<br>
  ******************************** Nell’originale, «buona.»</big></p><br><br><br>
 
 <p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
