--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -118,7 +118,7 @@
 <td><big><big><strong><a href="candela.html">42. La candela di sego ed il razzo</a></strong></td></tr>
 
 <tr>
-<td><big><big><strong><a href="lodola.html">43. La lodola ed il passero solitario</a></strong></td>
+<td><big><big><strong><a href="lodolaepassero.html">43. La lodola ed il passero solitario</a></strong></td>
 <td><big><big><strong><a href="ilcane.html">44. Il cane</a></strong></td></tr>
 </table>
 </center>
