--- a/homepage.html
+++ b/homepage.html
@@ -58,7 +58,7 @@
 
 […] <i>o piccole o grandi, le memorie patrie è dovere il conoscerle; perché nel passato è gran parte del nostro avvenire. E se tutte le città contassero uomini solleciti di tali cose, conterebbero, cred’io, più caldi e più benemeriti cittadini. E se potessersi, in un’opera ciò, raccogliere tutte le notizie che riguardano ciascuna città, ciascuna terra, ciascuna scienza; e si riducesse l’umano sapere a monografie da un lato, e dall’altro ad enciclopedie; eviterebbesi il difetto delle generalità troppo larghe e delle troppo servili minuzie.<br>
 La storia del Municipio dovrebbe insegnarsi per primo, ma in armonia, non in guerra, con la storia della nazione e di tutto il genere umano.  </i><br>
-<strong>Niccolò Tommaseo</strong><br><br>
+<strong>Nicolò Tommaseo</strong><br><br>
 
 [...] <i>le città vanno in rovina quando non sono in grado di discernere gli uomini che non valgono nulla da quelli valenti.</i><br>
 <strong>Diogene Laerzio</strong><br><br>
