--- a/Redorici Roffi.html
+++ b/Redorici Roffi.html
@@ -83,7 +83,7 @@ Augusta Redorici Roffi, <i>C’era una volta l’Impresa</i>, a cura di Maria Gr
 
 <p><center><big>La tomba della Redorici Roffi e del marito.</big></center><br>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/tomba Augusta.jpg" width="480" height="680"><br><br>
-<p><center><big>Due storiche “colonne” del Museo Civico di Vignola,<br>  Angela Giansante (a sinistra) e Maria Pia Corsini (a destra), a lungo strette collaboratrici della Redorici Roffi.</center></big></p>
+<p><center><big>In una fotografia del 2022, due storiche “colonne” del Museo Civico di Vignola,<br> a lungo strette collaboratrici della Redorici Roffi: a sinistra, Angela Giansante (1945-2023); a destra, Maria Pia Corsini.</center></big></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/ringraziamento.jpg" width="500" height="700"><br><br>
 
 <p><center><big>La locandina dell’evento pubblico del 15 dicembre 2022 per ricordare la Redorici Roffi<br> presso il Museo Civico di Vignola a lei intitolato.</big></center></p>
