--- a/marzo.html
+++ b/marzo.html
@@ -95,13 +95,9 @@ Nelle immagini qui sotto, proponiamo prima una riproduzione del frontespizio del
 
 <p><big><strong>30 marzo 1824</strong>: nacque a Modena <strong>ALESSANDRO PLESSI</strong>, amministratore locale e studioso.<br><br>  
 
- 
-
-Alessandro Plessi trascorse buona parte dell’esistenza a Vignola e di quel Comune fu sindaco a più riprese (1860-1865, 1868-1891, 1902-1905). Di frequente in collaborazione con alcuni benemeriti concittadini, tra i quali <strong>Giovanni Rodolfi</strong> (1828-1896), <strong>Francesco Selmi</strong> (1817-1881) e <strong>Luca Antonio Tosi</strong> (1811-1876), egli promosse la nascita di enti, associazioni, spazi e infrastrutture per il bene della comunità, e si distinse come uno dei principali organizzatori delle celebrazioni per il secondo centenario della nascita di <strong>Lodovico Antonio Muratori</strong> (1672-1750).<br>    
-
-Il nostro personaggio mandò alle stampe – fra l’altro – il libro <i>Istorie vignolesi narrate a’ suoi figli da Alessandro Plessi</i> (Vignola, Tipografia di Antonio Monti, s.d. [ma: 1885]) e curò la prima edizione di <i>De Vineolae moderniori statu chronica enarratio</i> (Bononiae, Apud Nicolaum Zanichelli […], 1872), opera lasciata manoscritta da <strong>Domenico Belloi</strong> (1660-1712).<br>  
-
-Plessi morì il 6 ottobre 1907 a Zenzano (territorio che comprendeva le odierne frazioni Formica e – in buona parte – Garofano) di Savignano sul Panaro. La sua tomba si trova nel cimitero di Vignola.<br><br>
+Alessandro Plessi trascorse buona parte dell’esistenza a Vignola e di quel Comune fu sindaco a più riprese (1860-1865, 1868-1891, 1902-1905). Di frequente in collaborazione con alcuni benemeriti concittadini, tra i quali <strong>Giovanni Rodolfi</strong> (1828-1896), <strong>Francesco Selmi</strong> (1817-1881) e <strong>Luca Antonio Tosi</strong> (1811-1876), egli promosse la nascita di enti, associazioni, spazi e infrastrutture a vantaggio della comunità, e si distinse come uno dei principali organizzatori delle celebrazioni per il secondo centenario della nascita di <strong>Lodovico Antonio Muratori</strong> (1672-1750).<br>    
+Il personaggio di cui stiamo parlando fece uscire dai torchi – fra l’altro – il libro <i>Istorie vignolesi narrate a’ suoi figli da Alessandro Plessi</i> (Vignola, Tipografia di Antonio Monti, s.d. [ma: 1885]) e curò la prima edizione di <i>De Vineolae moderniori statu chronica enarratio</i> (Bononiae, Apud Nicolaum Zanichelli […], 1872), opera lasciata manoscritta da <strong>Domenico Belloi</strong> (1660-1712).<br>  
+Il Nostro morì il 6 ottobre 1907 a Zenzano – territorio che comprendeva le odierne frazioni di Formica e, in buona parte, di Garofano – di Savignano sul Panaro (MO). La sua tomba si trova nel cimitero di Vignola.<br><br>
 Nell’immagine sottostante, Plessi nel 1864. Fonte: Raccolta famiglia Plessi.</big></p><br><br>
 <img src="img/celebri vignolesi/Plessi Alessandro/plessi.jpg" width="390" height="650"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Alessandro Plessi?<br>Allora, visita il suo <a href="Plessi1.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
