--- a/ottobre.html
+++ b/ottobre.html
@@ -79,7 +79,7 @@ Nelle immagini sottostanti, due fotografie scattate il 15 febbraio 2020, in occa
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/studiolo.jpg" width="375" height="640"><br><br>
 <strong><big><center>Vuoi saperne di più su Lodovico Antonio Muratori?<br>Allora, visita il suo <a href="Muratori.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong><br><br><br>
 
-<p class="index-p3"><strong>27</strong> (o <strong>28</strong>) <strong>ottobre 1811</strong>: nacque a Vignola <strong>LUCA ANTONIO – talvolta, chiamato semplicemente Luca – TOSI</strong>, medico, amministratore locale, letterato, studioso e patriota.<br><br>  
+<p class="index-p3"><strong>27</strong> (o <strong>28</strong>) <strong>ottobre 1811</strong>: nacque a Vignola <strong>LUCA ANTONIO – talvolta, chiamato semplicemente <strong>Luca</strong> – TOSI</strong>, medico, amministratore locale, letterato, studioso e patriota.<br><br>  
 Venuto al mondo in una famiglia ricca e stimata, Luca Antonio Tosi svolse la professione di medico e ricoprì diverse importanti cariche politico-amministrative nella comunità della sua terra d’origine, rivelandosene una delle figure in assoluto più operose, lungimiranti e rappresentative del XIX secolo.<br>
 Nemico del regime austroestense già negli anni giovanili, il nostro personaggio s’impegnò per arrivare all’unificazione nazionale sotto la dinastia sabauda e, poi, per cementare il nuovo Regno e “fare gli Italiani”.<br>
 Tosi diede alle stampe scritti di carattere medico e una <i>Storia cronologica di Vignola ad uso delle scuole</i> (1872).<br>  
